--- a/Swlh.WebApp/Views/Post/Details.cshtml
+++ b/Swlh.WebApp/Views/Post/Details.cshtml
@@ -8,12 +8,15 @@
 
 <div>
     <h2>@Model.Title</h2>
-    <span class="small">@Model.CreatedAt.ToString("dddd, dd MMMM yyyy HH:mm:ss", new System.Globalization.CultureInfo("vi-VN"))</span>
+    <span class="small">@Model.CreatedAt.ToLocalTime().ToString("dddd, dd MMMM yyyy HH:mm:ss", new System.Globalization.CultureInfo("vi-VN"))</span>
     <span>Số lượt xem: @Model.AccessedCount</span>
     <div class="mt-auto mb-2">
         @foreach (var tag in Model.Tags)
         {
-            <span class="badge bg-secondary">@tag.Value</span>
+            <a asp-controller="@nameof(PostController)[..^10]"
+               asp-action="@nameof(PostController.Index)"
+               asp-route-TagNames="@tag.Value"
+               class="badge bg-secondary text-decoration-none">@tag.Value</a>
         }
     </div>
 
@@ -66,6 +69,35 @@
     Guid.TryParse(Context.Session.GetString("Id"), out var id);
 }
 
+<!-- Lượt reaction của post -->
+<!-- Reactions + Author/Time -->
+<div class="mb-2">
+    <button class="btn btn-sm btn-outline-success" onclick="handleReact(this.parentElement, `/api/PostReaction`, `@Model.Id`, true)">
+        @if (Model.Reactions.Any(r => r.IsLike && r.AccountId == id))
+        {
+            <i class="bi bi-hand-thumbs-up-fill"></i>
+        }
+        else
+        {
+            <i class="bi bi-hand-thumbs-up"></i>
+        }
+        <span class="ms-1">@Model.Reactions.Where(r => r.IsLike).Count()</span>
+    </button>
+
+    <button class="btn btn-sm btn-outline-danger" onclick="handleReact(this.parentElement, `/api/PostReaction`, `@Model.Id`, false)">
+        @if (Model.Reactions.Any(r => !r.IsLike && r.AccountId == id))
+        {
+            <i class="bi bi-hand-thumbs-down-fill"></i>
+        }
+        else
+        {
+            <i class="bi bi-hand-thumbs-down"></i>
+        }
+        <span class="ms-1">@Model.Reactions.Where(r => !r.IsLike).Count()</span>
+    </button>
+</div>
+<!-- End of Lượt reaction của post -->
+
 <!-- Bình luận góp ý -->
 <div class="mb-5">
     <h3 class="mb-3">Bình luận góp ý</h3>
@@ -73,11 +105,11 @@
     <!-- Comment Form -->
     @if (id != Guid.Empty)
     {
-        <form method="post"
+        <form method="post" id="myForm"
               asp-controller="@nameof(CommentOnPostController)[..^10]"
               asp-action="@nameof(CommentOnPostController.Handle)"
               class="d-flex justify-content-between gap-2 mb-3">
-            <textarea name="Content" class="form-control" placeholder="Nhập bình luận..."></textarea>
+            <textarea id="myInput" name="Content" class="form-control" placeholder="Nhập bình luận..."></textarea>
             <button type="submit" name="type" value="add" class="btn btn-primary align-self-start">Gửi</button>
         </form>
     }
@@ -179,7 +211,7 @@
                 <div class="d-flex justify-content-between align-items-center">
                     <div class="me-2">
 
-                        <button class="btn btn-sm btn-outline-success" onclick="handleReact(this.parentElement, `@comment.Id`, true)">
+                        <button class="btn btn-sm btn-outline-success" onclick="handleReact(this.parentElement, `/api/CommentOnPostReaction`, `@comment.Id`, true)">
                             @if (comment.Reactions.Any(r => r.IsLike && r.AccountId == id))
                             {
                                 <i class="bi bi-hand-thumbs-up-fill"></i>
@@ -191,7 +223,7 @@
                             <span class="ms-1">@comment.Reactions.Where(r => r.IsLike).Count()</span>
                         </button>
 
-                        <button class="btn btn-sm btn-outline-danger" onclick="handleReact(this.parentElement, `@comment.Id`, false)">
+                        <button class="btn btn-sm btn-outline-danger" onclick="handleReact(this.parentElement, `/api/CommentOnPostReaction`, `@comment.Id`, false)">
                             @if (comment.Reactions.Any(r => !r.IsLike && r.AccountId == id))
                             {
                                 <i class="bi bi-hand-thumbs-down-fill"></i>
@@ -205,7 +237,7 @@
                     </div>
                     <div class="text-end small text-muted">
                         <strong>@comment.Account.Username</strong>
-                        <span>@comment.CreatedAt.ToString("g")</span>
+                        <span>@comment.CreatedAt.ToLocalTime().ToString("g")</span>
                     </div>
                 </div>
 
@@ -216,90 +248,4 @@
 </div>
 <!-- End of Bình luận góp ý -->
 
-<script>
-    function handleReact(container, commentId, isLike) {
-
-        var likeButton = container.children[0];
-        var disLikeButton = container.children[1];
-
-        var likeIcon = likeButton.querySelector('i');
-        var disLikeIcon = disLikeButton.querySelector('i');
-
-        var isLiked = () => likeIcon.classList.contains('bi-hand-thumbs-up-fill');
-        var isDisliked = () => disLikeIcon.classList.contains('bi-hand-thumbs-down-fill');
-
-        var currentIsLike = null;
-        if(isLiked()) currentIsLike = true;
-        if(isDisliked()) currentIsLike = false;
-
-
-        function updateCount(button, isIncrease) {
-            var count = button.querySelector('span');
-            isIncrease
-                ? (count.innerText = parseInt(count.innerText) + 1)
-                : (count.innerText = parseInt(count.innerText) - 1);
-        }
-
-        fetch(`/api/CommentOnPostReaction?commentId=${commentId}&isLike=${isLike}`, {
-            method: 'POST',
-        })
-        .then(res => {
-            if(res.status == 401) throw new Error('Bạn chưa đăng nhập.')
-            if(res.status == 404) throw new Error('Không tìm thấy bình luận.')
-            if(500 <= res.status && res.status < 600) throw new Error('Lỗi hệ thống.')
-        })
-        .then(res => {
-            if(currentIsLike == null) {
-                if(isLike) {
-                    likeIcon.classList.replace('bi-hand-thumbs-up', 'bi-hand-thumbs-up-fill')
-                    updateCount(likeButton, true)
-                }
-                else {
-                    disLikeIcon.classList.replace('bi-hand-thumbs-down', 'bi-hand-thumbs-down-fill')
-                    updateCount(disLikeButton, true)
-                }
-            }
-            else {
-                if(currentIsLike == isLike) {
-                    if(currentIsLike) {
-                        likeIcon.classList.replace('bi-hand-thumbs-up-fill', 'bi-hand-thumbs-up')
-                        updateCount(likeButton, false)
-                    }
-                    else {
-                        disLikeIcon.classList.replace('bi-hand-thumbs-down-fill', 'bi-hand-thumbs-down')
-                        updateCount(disLikeButton, false)
-                    }
-                }
-                else {
-                    if(isLike == true) {
-                        likeIcon.classList.replace('bi-hand-thumbs-up', 'bi-hand-thumbs-up-fill')
-                        disLikeIcon.classList.replace('bi-hand-thumbs-down-fill', 'bi-hand-thumbs-down')
-                        updateCount(likeButton, true)
-                        updateCount(disLikeButton, false)
-                    }
-                    else {
-                        likeIcon.classList.replace('bi-hand-thumbs-up-fill', 'bi-hand-thumbs-up')
-                        disLikeIcon.classList.replace('bi-hand-thumbs-down', 'bi-hand-thumbs-down-fill')
-                        updateCount(likeButton, false)
-                        updateCount(disLikeButton, true)
-                    }
-                }
-            }
-        })
-        .catch(err => {
-            const wrapper = document.createElement('div');
-            wrapper.className = 'position-fixed bottom-0 end-0 p-3';
-            wrapper.style.zIndex = '1050';
-
-            wrapper.innerHTML = `
-                <div class="alert alert-danger alert-dismissible fade show shadow-sm small mb-0" role="alert">
-                    ${err.message}
-                    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-                </div>
-            `;
-
-            document.body.appendChild(wrapper);
-        });
-
-    }
-</script>
+<script src="~/js/handle_react.js" defer></script>
