--- a/Swlh.WebApp/Views/CustomFiles/Index.cshtml
+++ b/Swlh.WebApp/Views/CustomFiles/Index.cshtml
@@ -2,7 +2,7 @@
 @model IEnumerable<Swlh.WebApp.Domain.Entities.CustomFile>
 
 @{
-    ViewData["Title"] = "File";
+    ViewData["Title"] = "Quản lý file";
 }
 
 <p>
