--- a/Swlh.WebApp/Views/Post/Edit.cshtml
+++ b/Swlh.WebApp/Views/Post/Edit.cshtml
@@ -53,7 +53,8 @@
             </div>
 
             <div class="form-group mb-3">
-                <input type="submit" value="Sửa" class="btn btn-primary" />
+                <button type="submit" class="btn btn-primary me-2">Lưu</button>
+                <button class="btn btn-secondary" onclick="window.history.back()">Huỷ</button>
             </div>
         </form>
     </div>
