--- a/Swlh.WebApp/Views/Shared/_Layout.cshtml
+++ b/Swlh.WebApp/Views/Shared/_Layout.cshtml
@@ -5,7 +5,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - Swlh.WebApp</title>
+    <title>@ViewData["Title"] - Swlh</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap-icons.css" />
     @* <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet"> *@
@@ -16,7 +16,7 @@
 <body style="margin-top: 70px;">
     @if (TempData["Msg"] != null)
     {
-        <div class="position-fixed bottom-0 end-0 p-3" style="z-index: 1050;">
+        <div class="position-fixed bottom-0 end-0 p-3" style="z-index: 9999;">
             <div class="alert alert-success alert-dismissible fade show shadow-sm small mb-0" role="alert">
                 @TempData["Msg"]
                 <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
@@ -29,7 +29,7 @@
             z-index: 0 !important; /* Or just lower than TinyMCE */
         }
     </style>
-    <header class="position-fixed top-0 start-0 w-100 " style="z-index: 9999;">
+    <header class="position-fixed top-0 start-0 w-100 " style="z-index: 5;">
         <nav class="navbar p-0 navbar-fixed-top navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container">
                 <a class="navbar-brand d-block d-sm-none d-md-block" asp-area="" asp-controller="Home" asp-action="Index">Swlh</a>
@@ -42,7 +42,7 @@
                     <form asp-controller="@nameof(SearchController)[..^10]"
                           asp-action="@nameof(SearchController.Index)"
                           method="get">
-                        <input id="search" class="form-control my-2" type="text" name="query" value="@Context.Request.Query["query"]" placeholder="Bấm / để tìm kiếm" />
+                        <input id="search" class="form-control my-2" type="text" name="query" value="@Context.Request.Query["query"]" placeholder="Bấm / để tra cứu từ vựng" />
                     </form>
 
                     <script>
@@ -114,6 +114,14 @@
                                                asp-controller="@nameof(AdminController)[..^10]"
                                                asp-action="@nameof(AdminController.NavigationManager)">
                                                 Thanh điều hướng
+                                            </a>
+                                        </li>
+
+                                        <li class="nav-item">
+                                            <a class="dropdown-item"
+                                               asp-controller="@nameof(AdminController)[..^10]"
+                                               asp-action="@nameof(AdminController.FooterManager)">
+                                                Footer
                                             </a>
                                         </li>
 
@@ -217,6 +225,7 @@
     <footer class="border-top footer text-muted">
         <div class="container">
             &copy; 2025 - Swlh.WebApp
+            <partial name="_FooterList" />
             @* <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a> *@
         </div>
     </footer>
